# salt-channel-c

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  client_test.c  debug-san.sh  debug-sodium.sh  debug-tweet.sh  debug.sh  host_test.c  install-libraries.sh  salt-c.sublime-project  salt-c.sublime-workspace  salt.c  salt.h  static-analyzer.sh  test_echo_with_java.sh  travis-install-libsodium.sh  valgrind.sh
benchmark/: CMakeLists.txt  Makefile  client_handshake_benchmark.c  client_handshake_benchmark.h  crypto_benchmark.c  crypto_benchmark.h  host_handshake_benchmark.c  host_handshake_benchmark.h  main.c  time_stamp.c  time_stamp.h  time_stamp_linux.c
examples/: CMakeLists.txt  Makefile  client.c  client_echo.c  host.c  host_echo.c  multi_host.c  randombytes_linux.c  salt_crypto_wrapper.h  salt_io.c  salt_io.h
fuzz-tests/: .gitignore  CMakeLists.txt  Makefile  client_a2.c  client_app.c  client_m2.c  client_m3.c  crypt_mock.c  enable.sh  fuzz.sh  fuzz_a1a2_host.c  fuzz_a2_client.c  fuzz_client.c  fuzz_host.c  fuzz_no_a1a2_host.c  fuzz_read_parse.c  host_a1m1.c  host_app.c  host_m4.c  libfuzzer.inc  read_parse.c  readme.md  test_data_mock.c  util.c  util.h
fuzz-tests/_build/: client_app.cov  client_app.fuzz  client_app.gcda  client_app.gcno  coverage.info  crypt_mock.gcno  index-sort-f.html  index-sort-l.html  index.html  salt_util.gcda  salt_util.gcno  salt_v2.gcda  salt_v2.gcno  test_data.gcno  tweetnacl.gcda  tweetnacl.gcno
fuzz-tests/_build/fuzz-tests/: client_app.c.func-sort-c.html  client_app.c.func.html  client_app.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html
fuzz-tests/_build/src/: index-sort-f.html  index-sort-l.html  index.html  salt_util.c.func-sort-c.html  salt_util.c.func.html  salt_util.c.gcov.html  salt_v2.c.func-sort-c.html  salt_v2.c.func.html  salt_v2.c.gcov.html
fuzz-tests/input/client_a2/: 001
fuzz-tests/input/client_m3/: 001
fuzz-tests/input/fuzz_a1a2_host/: valid_a1m1  valid_a1m1m4  valid_m1  valid_m1m4app  valid_m1m4appAndMultiapp
fuzz-tests/input/fuzz_a2_client/: 002
fuzz-tests/input/fuzz_client/: valid_m2  valid_m2m3  valid_m2m3app  valid_m2m3appAndMultiApp
fuzz-tests/input/fuzz_client_a1a2/: 001
fuzz-tests/input/fuzz_host/: valid_m1m4
fuzz-tests/input/fuzz_no_a1a2_host/: valid_a1
fuzz-tests/input/fuzz_read_parse/: 000041  002  003
fuzz-tests/input/host_a1m1/: 001  002  004
fuzz-tests/input/host_app/: 001
fuzz-tests/input/host_m4/: 001  001_clear  001_enc
fuzz-tests/input/read_parse/: 1  10  13  2  id:000004,orig:28fd925b81e714cda31fa6db8a22c7887a8e4ab9  id:000009,orig:c2fc2cb80c8e459995fe9abfa0ab106f5f960f21  id:000027,orig:f1a234b55f9cf5c75972df70b32170148f06c6ad
fuzz-tests/output/client_a2/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
fuzz-tests/output/client_a2/queue/: id:000001,src:000000,op:flip1,pos:10,+cov  id:000002,src:000000,op:havoc,rep:16,+cov  id:000003,src:000000,op:havoc,rep:16,+cov  id:000004,src:000000,op:havoc,rep:8,+cov  id:000005,src:000000,op:havoc,rep:2,+cov  id:000006,src:000000,op:havoc,rep:8,+cov  id:000007,src:000000,op:havoc,rep:16,+cov  id:000008,src:000000,op:havoc,rep:16,+cov  id:000009,src:000000,op:havoc,rep:64,+cov  id:000010,src:000000,op:havoc,rep:8,+cov  id:000011,src:000000,op:havoc,rep:16,+cov  id:000012,src:000000,op:havoc,rep:8,+cov  id:000013,src:000000,op:havoc,rep:128  id:000014,src:000000,op:havoc,rep:64,+cov
fuzz-tests/output/client_app/: fuzz_bitmap  fuzzer_stats  plot_data
fuzz-tests/output/client_m2/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
fuzz-tests/output/client_m2/queue/: id:000001,src:000000,op:flip1,pos:0,+cov  id:000002,src:000000,op:flip1,pos:1,+cov  id:000004,src:000000,op:havoc,rep:2,+cov
fuzz-tests/output/client_m3/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
fuzz-tests/output/client_m3/queue/: id:000002,src:000000,op:havoc,rep:128,+cov  id:000003,src:000001+000002,op:splice,rep:2,+cov  id:000004,src:000003,op:int16,pos:17,val:+1000,+cov
fuzz-tests/output/host_a1m1/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
fuzz-tests/output/host_a1m1/queue/: id:000001,orig:002  id:000004,src:000000,op:havoc,rep:64,+cov  id:000005,src:000000,op:havoc,rep:128,+cov  id:000006,src:000001,op:flip1,pos:4,+cov  id:000007,src:000001,op:flip1,pos:5,+cov  id:000008,src:000001,op:flip1,pos:5,+cov  id:000009,src:000007,op:havoc,rep:128,+cov
fuzz-tests/output/host_app/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
fuzz-tests/output/host_app/queue/: id:000000,orig:001  id:000002,src:000000,op:havoc,rep:2,+cov
fuzz-tests/output/host_m4/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
fuzz-tests/output/read_parse/: fuzz_bitmap  fuzzer_stats  plot_data
fuzz-tests/output/read_parse/queue/: id:000001,src:000000,op:havoc,rep:32,+cov  id:000024,src:000012,op:havoc,rep:2  (+31 more)
src/: CMakeLists.txt  salt.c  salt.h  salt_crypto_wrapper.h  salt_crypto_wrapper_test.c  salt_crypto_wrapper_test.h  salt_util.c  salt_util.h  salt_v2.c  salt_v2.h  salti_handshake.c  salti_handshake.h  salti_util.c  salti_util.h  v2notes.md  v2notes.txt
src/crypto/: CMakeLists.txt  salt_crypto.c  salt_crypto.h  salt_crypto_api.h  salt_crypto_sodium.c  salt_crypto_sodium.h  salt_crypto_tweet.c  salt_crypto_tweet.h
src/crypto/lib/: README.md
src/crypto/tweetnacl_modified/: tweetnacl_modified.c  tweetnacl_modified.h
src/crypto/wrap/: salt_crypto_wrap.h
tests/: CMakeLists.txt  CodeCoverage.cmake  a1a2.c  a1a2handshake.c  client_handshake.c  crypto_api_test.c  easy_handshake_client.c  host_a1a2.c  host_handshake.c  host_time.c  hostclient_session.c  multimessage.c  salt_init.c  salt_io_mock.c  salt_io_mock.h  salt_mock.c  salt_mock.h  salt_read.c  salt_write.c  session.c  sign_test.c  test_data.c  test_data.h  time_check.c
tests/cfifo/: .gitignore  Makefile  README.md  cfifo.c  cfifo.h  test.c
tests/salt_taste/: CMakeLists.txt  Makefile  README.md  msp430-none-iar_test.cmd  salt_taste.h  salt_taste_hal.h
tests/salt_taste/src/: salt_taste.c  salt_taste.h  salt_taste_event.c  salt_taste_event.h  salt_taste_hal.h
(+69 files in other folders)
